RESOLVED FIXED120843
REGRESSION(r155140) Broke pixel tests on EFL/GTK/Qt
https://bugs.webkit.org/show_bug.cgi?id=120843
Summary REGRESSION(r155140) Broke pixel tests on EFL/GTK/Qt
Allan Sandfeld Jensen
Reported 2013-09-06 03:29:23 PDT
The new common implementatino of forceRepaintDoneCallback is missing the important notifyDone() callback which the non-Apple ports use.
Attachments
Patch (1.46 KB, patch)
2013-09-06 03:36 PDT, Allan Sandfeld Jensen
no flags
Gábor Ábrahám
Comment 1 2013-09-06 03:34:42 PDT
I'm on it, I have the fix soon.
Allan Sandfeld Jensen
Comment 2 2013-09-06 03:36:00 PDT
Gábor Ábrahám
Comment 3 2013-09-06 03:46:06 PDT
I found another bug, I will upload the fix soon.
Gábor Ábrahám
Comment 4 2013-09-06 03:50:31 PDT
Additionally the whole force repaint code should be in if (PlatformWebView::windowShapshotEnabled()) block, as the previous Qt implementation. By the way I think it should be windowSnapshotEnabled.
Csaba Osztrogonác
Comment 5 2013-09-06 03:53:34 PDT
Comment on attachment 210718 [details] Patch LGTM, r=me
Csaba Osztrogonác
Comment 6 2013-09-06 03:54:42 PDT
(In reply to comment #4) > Additionally the whole force repaint code should be in if (PlatformWebView::windowShapshotEnabled()) block, as the previous Qt implementation. > By the way I think it should be windowSnapshotEnabled. Nice catch. I think it can be done in a separated patch. Could you file a bug report and upload your fix?
WebKit Commit Bot
Comment 7 2013-09-06 05:06:47 PDT
Comment on attachment 210718 [details] Patch Clearing flags on attachment: 210718 Committed r155187: <http://trac.webkit.org/changeset/155187>
WebKit Commit Bot
Comment 8 2013-09-06 05:06:50 PDT
All reviewed patches have been landed. Closing bug.
Simon Fraser (smfr)
Comment 9 2013-09-06 08:54:06 PDT
Sorry about that. It wasn't obvious to me whether the notifyDone was needed.
Note You need to log in before you can comment on or make changes to this bug.