REGRESSION(r155140) Broke pixel tests on EFL/GTK/Qt https://bugs.webkit.org/show_bug.cgi?id=120843

Reviewed by Csaba Osztrogonác.

Call notifyDone like the platform specific forceRepaintDoneCallback methods
it replaced did. The method is empty on the Apple ports.

* WebKitTestRunner/TestInvocation.cpp:
(WTR::TestInvocation::forceRepaintDoneCallback):


Canonical link: https://commits.webkit.org/138796@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@155187 268f45cc-cd09-0410-ab3c-d52691b4dbfc